aggiunto tag semantici

--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     <title>London trip</title>
 </head>
 <body>
-    
+    <!-- intestazione pagina -->
+    <header>
+
+    </header>
+    <!-- /intestazione pagina -->
+    <!-- corpo della pagina -->
+    <main>
+
+
+    </main>
+     <!-- /corpo della pagina -->
+     
+     <!-- sezioni della pagina  -->
+     <section>
+
+     </section>
+      <!-- /sezioni della pagina  -->
+      <!-- pie di pagina  -->
+      <footer>
+
+      </footer>
+      <!-- /pie di pagina  -->
 </body>
 </html>
