--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <main>
         <section>
            <h2>Le  mie spese</h2> 
+           <!-- tabella spese  -->
             <table>
                 <thead>
                     <tr>
@@ -51,7 +52,20 @@
                     </tr>
                 </tfoot>
             </table>
+            <!-- /tabella spese  -->
             <hr>
+        </section>
+        <section>
+            <!-- lista cose da fare  -->
+            <h3>Cose da fare</h3>
+                <ul>
+                    <li>Visitare la Tower of London&cross;</li>
+                    <li>Visitare Greenwich&check;</li>
+                    <li>Ascoltare artista di strada&check;</li>
+                    <li>Mangiare tipico fish and cips inglese&cross;</li>
+                </ul>
+             <!-- /lista cose da fare  -->   
+             <hr>      
         </section>
 
         
