--- a/index.html
+++ b/index.html
@@ -67,6 +67,30 @@
              <!-- /lista cose da fare  -->   
              <hr>      
         </section>
+        <section>
+            <!-- lista info utili  -->
+            <h3>Info utili:</h3>
+            <ol>
+                <li>Numeri utili di ermegenza</li>
+            <ul>
+                <li><strong>999</strong>-Emergenza</li>
+                <li><strong>101</strong>-Numero polizia</li>
+                <li><strong>111</strong>-Assistenza medica</li>
+            </ul>
+                <li>Hotel</li>
+            <ul>
+                <li><strong>Nome Hotel</strong>:Buckingam Palace</li>
+                <li><strong>Indirizzo Hotel</strong>:Westmister,London SW1AA,Regno Unito</li>
+            </ul>
+                <li>Aereo</li>
+            <ul>
+                <li><strong>Volo di andata</strong>:YI234X, ore 9.30 da Milano Malpensa</li>
+                <li><strong>Volo di ritorno</strong>:YI236X, ore 18.30 da London Heathrow</li>
+            </ul>
+            </ol>
+            <!-- /lista info utili  -->
+            <hr>
+        </section>
 
         
         
